# My-BTech-2nd-Year

./: .gitignore  CMakeLists.txt  README.md
DSE2130-DM_Lab/: Experiment 1.ipynb  IT HAS ERRORS, DO NOT RUN-Experiment 2.ipynb
DSE2130-DM_Lab/data/: iris_clean.csv
DSE2131-DSA_Lab/LAB2-1D Array/: LAB2-1D Array-1.c  LAB2-1D Array-2.c  LAB2-1D Array-3.c  LAB2-1D Array-4.c
DSE2131-DSA_Lab/LAB3-2D Array/: LAB3-2D Array-1.c  LAB3-2D Array-2.c  LAB3-2D Array-3.c  LAB3-2D Array-4.c
DSE2131-DSA_Lab/Lab1-Pointers/: Lab1-Pointers-1.c  Lab1-Pointers-2.c  Lab1-Pointers-3.c  Lab1-Pointers-4.c
DSE2131-DSA_Lab/Lab10-Tree/: Lab10-Tree-1.c  Lab10-Tree-2.c
DSE2131-DSA_Lab/Lab4-Sorting/: Lab4-Sorting-1.c  Lab4-Sorting-2.c  Lab4-Sorting-3.c  Lab4-Sorting-4.c
DSE2131-DSA_Lab/Lab5-Linked List/: Lab5-Linked List.c
DSE2131-DSA_Lab/Lab7-Stack-Part1/: Lab7-Stack-Part1.c
DSE2131-DSA_Lab/Lab7-Stack-Part2/: Lab7-Stack-Part2.c
DSE2131-DSA_Lab/Lab9-Queue/Part 1-Using Array/: Lab9-Queue-Using Array-1.c  Lab9-Queue-Using Array-2.c
DSE2131-DSA_Lab/Lab9-Queue/Part 2-Using Linked List/: Lab9-Queue-Using Linked List-1.c  Lab9-Queue-Using Linked List-2.c
DSE2131-DSA_Lab/LabX-Infix_to_Postfix/: LabX-Infix_to_Postfix.c
NPTEL-Programming_In_Java/Week 1/: W01_P1.java  W01_P2.java  W01_P3.java  W01_P4.java  W01_P5.java
NPTEL-Programming_In_Java/Week 10/: W10_P1.java  W10_P2.java  W10_P3.java  W10_P4.java  W10_P5.java
NPTEL-Programming_In_Java/Week 2/: W02_P1.java  W02_P2.java  W02_P3.java  W02_P4.java  W02_P5.java
NPTEL-Programming_In_Java/Week 3/: README.md  Student.java  W03_P1.java  W03_P2.java  W03_P3.java  W03_P5.java
NPTEL-Programming_In_Java/Week 4/: W04_P1.java  W04_P2.java  W04_P3.java  W04_P4.java  W04_P5.java
NPTEL-Programming_In_Java/Week 5/: W05_P1.java  W05_P2.java  W05_P3.java  W05_P4.java  W05_P5.java
NPTEL-Programming_In_Java/Week 6/: W06_P1.java  W06_P2.java  W06_P3.java  W06_P4.java  W06_P5.java
NPTEL-Programming_In_Java/Week 7/: W07_P1.java  W07_P2.java  W07_P3.java  W07_P4.java  W07_P5.java
NPTEL-Programming_In_Java/Week 8/: W08_P1.java  W08_P2.java  W08_P3.java  W08_P4.java  W08_P5.java
NPTEL-Programming_In_Java/Week 9/: W09_P1.java  W09_P2.java  W09_P3.java  W09_P4.java  W09_P5.java
