cmake_minimum_required(VERSION 4.0)
project(My_BTech_2nd_Year C)

set(CMAKE_C_STANDARD 23)

add_executable(DSA-Pointers-1 DSE2131-DSA_Lab/Lab1-Pointers/Lab1-Pointers-1.c)
add_executable(DSA-Pointers-2 DSE2131-DSA_Lab/Lab1-Pointers/Lab1-Pointers-2.c)
add_executable(DSA-Pointers-3 DSE2131-DSA_Lab/Lab1-Pointers/Lab1-Pointers-3.c)
add_executable(DSA-Pointers-4 DSE2131-DSA_Lab/Lab1-Pointers/Lab1-Pointers-4.c)
