cmake_minimum_required(VERSION 4.0)
project(My_BTech_2nd_Year C)

set(CMAKE_C_STANDARD 23)

add_executable(DSA-Pointers-1 DSE2131-DSA_Lab/Lab1-Pointers/Lab1-Pointers-1.c)
add_executable(DSA-Pointers-2 DSE2131-DSA_Lab/Lab1-Pointers/Lab1-Pointers-2.c)
add_executable(DSA-Pointers-3 DSE2131-DSA_Lab/Lab1-Pointers/Lab1-Pointers-3.c)
add_executable(DSA-Pointers-4 DSE2131-DSA_Lab/Lab1-Pointers/Lab1-Pointers-4.c)

add_executable("DSA-1D_Array-1" "DSE2131-DSA_Lab/LAB2-1D Array/LAB2-1D Array-1.c")
add_executable("DSA-1D_Array-2" "DSE2131-DSA_Lab/LAB2-1D Array/LAB2-1D Array-2.c")
add_executable("DSA-1D_Array-3" "DSE2131-DSA_Lab/LAB2-1D Array/LAB2-1D Array-3.c")
add_executable("DSA-1D_Array-4" "DSE2131-DSA_Lab/LAB2-1D Array/LAB2-1D Array-4.c")

add_executable("DSA-2D_Array-1" "DSE2131-DSA_Lab/LAB3-2D Array/LAB3-2D Array-1.c")
add_executable("DSA-2D_Array-2" "DSE2131-DSA_Lab/LAB3-2D Array/LAB3-2D Array-2.c")
add_executable("DSA-2D_Array-3" "DSE2131-DSA_Lab/LAB3-2D Array/LAB3-2D Array-3.c")
add_executable("DSA-2D_Array-4" "DSE2131-DSA_Lab/LAB3-2D Array/LAB3-2D Array-4.c")

add_executable("DSA-Stack-Part1" "DSE2131-DSA_Lab/Lab7-Stack-Part1/Lab7-Stack-Part1.c")

add_executable("DSA-Sorting-1" "DSE2131-DSA_Lab/Lab4-Sorting/Lab4-Sorting-1.c")
add_executable("DSA-Sorting-2" "DSE2131-DSA_Lab/Lab4-Sorting/Lab4-Sorting-2.c")
add_executable("DSA-Sorting-3" "DSE2131-DSA_Lab/Lab4-Sorting/Lab4-Sorting-3.c")
add_executable("DSA-Sorting-4" "DSE2131-DSA_Lab/Lab4-Sorting/Lab4-Sorting-4.c")

add_executable("DSA-Queue-Array-1" "DSE2131-DSA_Lab/Lab9-Queue/Part 1-Using Array/Lab9-Queue-Using Array-1.c")
add_executable("DSA-Queue-Array-2" "DSE2131-DSA_Lab/Lab9-Queue/Part 1-Using Array/Lab9-Queue-Using Array-2.c")

add_executable("Linked-List" "DSE2131-DSA_Lab/Lab5-Linked List/Lab5-Linked List.c")

add_executable("DSA-Stack-Part2" "DSE2131-DSA_Lab/Lab7-Stack-Part2/Lab7-Stack-Part2.c")

add_executable("DSA-Queue-Array-Part2-1" "DSE2131-DSA_Lab/Lab9-Queue/Part 2-Using Linked List/Lab9-Queue-Using Linked List-1.c")
add_executable("DSA-Queue-Array-Part2-2" "DSE2131-DSA_Lab/Lab9-Queue/Part 2-Using Linked List/Lab9-Queue-Using Linked List-2.c")

add_executable("DSA-Tree-1" "DSE2131-DSA_Lab/Lab10-Tree/Lab10-Tree-1.c")
add_executable("DSA-Tree-2" "DSE2131-DSA_Lab/Lab10-Tree/Lab10-Tree-2.c")

add_executable("DSA-Infix_to_postfix" "DSE2131-DSA_Lab/LabX-Infix_to_Postfix/LabX-Infix_to_Postfix.c")
